--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.4",
     "vercel": "^37.11.0"
   },
